--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -60,7 +60,6 @@
 
   /* z-indexes */
   --z-modal: 5000;
-  --z-app-navbar: 1000;
   --z-file-field-open-dialog-button: 100;
   --z-main-page-welcome: 20;
   --z-main-page-welcome-background-img: -10;
